--- a/tests/_output/SuccessCest.tryToSuccess2.fail.html
+++ b/tests/_output/SuccessCest.tryToSuccess2.fail.html
@@ -1,6 +1,110 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+        <title>Все статьи</title>
+    <style>
+    body {margin: 0px;padding: 0px;border: 0px;font-family:Arial, Helvetica, sans-serif;background:#E6E6E6;color:#666;}
 
-<p style="color: red">
-    Ваша карта устарела, проверьте срок действия!!!
+    /*Fonts*/
+    a { font-size:12px; color:#666;}
+    a:link{color:#999999; text-decoration:none;}
+    a:visited{color:#999999; text-decoration:none;}
+    h1 { font-size:20px; font-weight:bold; color:#333;}
+    h2 { font-size:24px; font-weight:bold; color:#222; margin:0px;}
+    h3 {font-size:14px; font-weight:bold; color:#333;}
+
+    /*Menu Begin*/
+    #menu{float:right;margin-top:30px;}
+    #menu ul li{ display:inline; list-style-type:none;}
+    #menu ul li a{padding:5px 0px; font-size:14px; text-decoration:none; margin:0px 10px; font-weight:bold;}
+    #menu ul li a span{font-size:14px; text-decoration:none; padding:0px 10px; color:#999999;}
+    /*Menu End*/
+
+    .center{width:960px;margin:0 auto;}
+
+
+    /*Homepage Boxs*/
+    #container {float:left;}
+    .box h1{padding-left:10px;}
+    .box p {margin:0px;width:200px;padding:15px 5px 10px 5px;float:left;}
+    .last{background:none;}
+
+    .line{
+        border: none; /* Убираем границу */
+        background-color: red; /* Цвет линии */
+        color: red; /* Цвет линии для IE6-7 */
+        height: 2px; /* Толщина линии */
+        border-top:1px solid #9EC1D4;
+        border-bottom: dotted 1px #9EC1D4;
+        padding-left:10px;
+    }
+
+    #container2 {float:right;}
+    .box h1{padding-left:10px;}
+    .box p {margin:0px;width:200px;padding:15px 5px 10px 5px;float:left;}
+    .last{background:none;}
+
+
+    /*Subpage Boxs*/
+    #box2holder{padding: 20px 30px;}
+    .box2{width:450px; float:left; padding:20px 0px;}
+    .box2 img{ border: solid 5px #F2F2F2; float:left;}
+    .box2 h3{margin:0px; padding:0px 5px; float:left;}
+    .box2 p{width:220px; float:left;padding:5px 5px; margin:0px;}
+    /*Subpage Boxs END*/
+
+
+    /*Footer*/
+    #footer {background:#222222;float:left;width:100%;height:50px;border-top:solid 1px #333333;}
+    .foot{width:960px;margin:0 auto; padding:10px 0px; font-size:12px;}
+    .foot a:link{color:#999;text-decoration:none;}
+    /*Footer END*/
+
+
+    .textbox{float:left;padding:50px 0px;width:700px;}
+    .feed{width:auto; float:left;}
+    .feed img{ border: solid 0px; margin-top:120px; padding:0px 7px;}
+
+    .back{loat:left;padding:10px 0px;width:120px; border-radius: 10px; font-family: 'Lora', serif}
+    .regtext {
+        width: 850px;
+        border-radius: 20px;
+        text-decoration: underline;
+    }
+
+    textarea {
+
+        background: #fcfcfc; /* Цвет фона */
+        border: 2px solid #a9c358; /* Параметры рамки */
+        padding: 10px; /* Поля */
+        width: 40%; /* Ширина */
+        height: 100px; /* Высота */
+        box-sizing: border-box; /* Алгоритм расчёта ширины */
+        font-size: 14px; /* Размер шрифта */
+
+    }
+</style>
+
+</head>
+
+
+<body>
+
+<p>
+    Not enough money
 </p>
-<a href="/">На главную</a>
+<form action="/app/Logic/action.php" method="post">
+    <p>Card number<input type="number" minlength="16" size="16" name="card_number"></p>
+    <p>Owner<input type="text" name="card_holder"></p>
+    <p>Expiration<input type="text" value="" name="card_expiration" /></p>
+    <p>CVV<input type="number" maxlength="3" name="cvv"></p>
+    <p>Order number<input type="number" maxlength="16" name="order_number"></p>
+    <p style="color: red">Sum<input type="text" name="sum"></p>
+    <button type="submit">Send</button>
 
+</form>
+
+
+</body>
+</html>
